# server/jobsServer/proto/jobs.pb.go
@@ -27,7 +27,7 @@ type JobProperties struct {
 	ResultTypeQuasiDist bool                   `protobuf:"varint,2,opt,name=resultTypeQuasiDist,proto3" json:"resultTypeQuasiDist,omitempty"`
 	ResultTypeExpVal    bool                   `protobuf:"varint,3,opt,name=resultTypeExpVal,proto3" json:"resultTypeExpVal,omitempty"`
 	TargetSimulator     string                 `protobuf:"bytes,4,opt,name=targetSimulator,proto3" json:"targetSimulator,omitempty"`
-	Metadata            *string                `protobuf:"bytes,5,opt,name=metadata,proto3,oneof" json:"metadata,omitempty"`
+	Metadata            string                 `protobuf:"bytes,5,opt,name=metadata,proto3" json:"metadata,omitempty"`
 	unknownFields       protoimpl.UnknownFields
 	sizeCache           protoimpl.SizeCache
 }
@@ -91,8 +91,8 @@ func (x *JobProperties) GetTargetSimulator() string {
 }
 
 func (x *JobProperties) GetMetadata() string {
-	if x != nil && x.Metadata != nil {
-		return *x.Metadata
+	if x != nil {
+		return x.Metadata
 	}
 	return ""
 }
@@ -226,7 +226,7 @@ func (x *PendingJob) GetId() string {
 var File_jobs_proto protoreflect.FileDescriptor
 
 var file_jobs_proto_rawDesc = string([]byte{
-	0x0a, 0x0a, 0x6a, 0x6f, 0x62, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0xf1, 0x01, 0x0a,
+	0x0a, 0x0a, 0x6a, 0x6f, 0x62, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0xdf, 0x01, 0x0a,
 	0x0d, 0x4a, 0x6f, 0x62, 0x50, 0x72, 0x6f, 0x70, 0x65, 0x72, 0x74, 0x69, 0x65, 0x73, 0x12, 0x2a,
 	0x0a, 0x10, 0x72, 0x65, 0x73, 0x75, 0x6c, 0x74, 0x54, 0x79, 0x70, 0x65, 0x43, 0x6f, 0x75, 0x6e,
 	0x74, 0x73, 0x18, 0x01, 0x20, 0x01, 0x28, 0x08, 0x52, 0x10, 0x72, 0x65, 0x73, 0x75, 0x6c, 0x74,
@@ -239,23 +239,22 @@ var file_jobs_proto_rawDesc = string([]byte{
 	0x70, 0x65, 0x45, 0x78, 0x70, 0x56, 0x61, 0x6c, 0x12, 0x28, 0x0a, 0x0f, 0x74, 0x61, 0x72, 0x67,
 	0x65, 0x74, 0x53, 0x69, 0x6d, 0x75, 0x6c, 0x61, 0x74, 0x6f, 0x72, 0x18, 0x04, 0x20, 0x01, 0x28,
 	0x09, 0x52, 0x0f, 0x74, 0x61, 0x72, 0x67, 0x65, 0x74, 0x53, 0x69, 0x6d, 0x75, 0x6c, 0x61, 0x74,
-	0x6f, 0x72, 0x12, 0x1f, 0x0a, 0x08, 0x6d, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61, 0x18, 0x05,
-	0x20, 0x01, 0x28, 0x09, 0x48, 0x00, 0x52, 0x08, 0x6d, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61,
-	0x88, 0x01, 0x01, 0x42, 0x0b, 0x0a, 0x09, 0x5f, 0x6d, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61,
-	0x22, 0x69, 0x0a, 0x07, 0x4a, 0x6f, 0x62, 0x44, 0x61, 0x74, 0x61, 0x12, 0x30, 0x0a, 0x0a, 0x70,
-	0x72, 0x6f, 0x70, 0x65, 0x72, 0x74, 0x69, 0x65, 0x73, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32,
-	0x0e, 0x2e, 0x4a, 0x6f, 0x62, 0x50, 0x72, 0x6f, 0x70, 0x65, 0x72, 0x74, 0x69, 0x65, 0x73, 0x48,
-	0x00, 0x52, 0x0a, 0x70, 0x72, 0x6f, 0x70, 0x65, 0x72, 0x74, 0x69, 0x65, 0x73, 0x12, 0x1e, 0x0a,
-	0x09, 0x71, 0x61, 0x73, 0x6d, 0x43, 0x68, 0x75, 0x6e, 0x6b, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09,
-	0x48, 0x00, 0x52, 0x09, 0x71, 0x61, 0x73, 0x6d, 0x43, 0x68, 0x75, 0x6e, 0x6b, 0x42, 0x0c, 0x0a,
-	0x0a, 0x44, 0x61, 0x74, 0x61, 0x53, 0x74, 0x72, 0x65, 0x61, 0x6d, 0x22, 0x1c, 0x0a, 0x0a, 0x50,
-	0x65, 0x6e, 0x64, 0x69, 0x6e, 0x67, 0x4a, 0x6f, 0x62, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64, 0x18,
-	0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x02, 0x69, 0x64, 0x32, 0x2b, 0x0a, 0x04, 0x4a, 0x6f, 0x62,
-	0x73, 0x12, 0x23, 0x0a, 0x06, 0x41, 0x64, 0x64, 0x4a, 0x6f, 0x62, 0x12, 0x08, 0x2e, 0x4a, 0x6f,
-	0x62, 0x44, 0x61, 0x74, 0x61, 0x1a, 0x0b, 0x2e, 0x50, 0x65, 0x6e, 0x64, 0x69, 0x6e, 0x67, 0x4a,
-	0x6f, 0x62, 0x22, 0x00, 0x28, 0x01, 0x42, 0x1d, 0x5a, 0x1b, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62,
-	0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x44, 0x70, 0x62, 0x6d, 0x2f, 0x6a, 0x6f, 0x62, 0x73, 0x5f, 0x73,
-	0x65, 0x72, 0x76, 0x65, 0x72, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x6f, 0x72, 0x12, 0x1a, 0x0a, 0x08, 0x6d, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61, 0x18, 0x05,
+	0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x6d, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61, 0x22, 0x69,
+	0x0a, 0x07, 0x4a, 0x6f, 0x62, 0x44, 0x61, 0x74, 0x61, 0x12, 0x30, 0x0a, 0x0a, 0x70, 0x72, 0x6f,
+	0x70, 0x65, 0x72, 0x74, 0x69, 0x65, 0x73, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x0e, 0x2e,
+	0x4a, 0x6f, 0x62, 0x50, 0x72, 0x6f, 0x70, 0x65, 0x72, 0x74, 0x69, 0x65, 0x73, 0x48, 0x00, 0x52,
+	0x0a, 0x70, 0x72, 0x6f, 0x70, 0x65, 0x72, 0x74, 0x69, 0x65, 0x73, 0x12, 0x1e, 0x0a, 0x09, 0x71,
+	0x61, 0x73, 0x6d, 0x43, 0x68, 0x75, 0x6e, 0x6b, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x48, 0x00,
+	0x52, 0x09, 0x71, 0x61, 0x73, 0x6d, 0x43, 0x68, 0x75, 0x6e, 0x6b, 0x42, 0x0c, 0x0a, 0x0a, 0x44,
+	0x61, 0x74, 0x61, 0x53, 0x74, 0x72, 0x65, 0x61, 0x6d, 0x22, 0x1c, 0x0a, 0x0a, 0x50, 0x65, 0x6e,
+	0x64, 0x69, 0x6e, 0x67, 0x4a, 0x6f, 0x62, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64, 0x18, 0x01, 0x20,
+	0x01, 0x28, 0x09, 0x52, 0x02, 0x69, 0x64, 0x32, 0x2b, 0x0a, 0x04, 0x4a, 0x6f, 0x62, 0x73, 0x12,
+	0x23, 0x0a, 0x06, 0x41, 0x64, 0x64, 0x4a, 0x6f, 0x62, 0x12, 0x08, 0x2e, 0x4a, 0x6f, 0x62, 0x44,
+	0x61, 0x74, 0x61, 0x1a, 0x0b, 0x2e, 0x50, 0x65, 0x6e, 0x64, 0x69, 0x6e, 0x67, 0x4a, 0x6f, 0x62,
+	0x22, 0x00, 0x28, 0x01, 0x42, 0x1d, 0x5a, 0x1b, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63,
+	0x6f, 0x6d, 0x2f, 0x44, 0x70, 0x62, 0x6d, 0x2f, 0x6a, 0x6f, 0x62, 0x73, 0x5f, 0x73, 0x65, 0x72,
+	0x76, 0x65, 0x72, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 })
 
 var (
@@ -292,7 +291,6 @@ func file_jobs_proto_init() {
 	if File_jobs_proto != nil {
 		return
 	}
-	file_jobs_proto_msgTypes[0].OneofWrappers = []any{}
 	file_jobs_proto_msgTypes[1].OneofWrappers = []any{
 		(*JobData_Properties)(nil),
 		(*JobData_QasmChunk)(nil),
